--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -269,23 +269,6 @@ endif # NETWORK_FILESYSTEMS
 
 source "fs/nls/Kconfig"
 source "fs/dlm/Kconfig"
-
-config VMFS_FS
-	tristate "VMFS file system support (to mount host directories etc.)"
-	select NLS
-	help
-	  Say Y here to enable support for accessing the host filesystem
-	  when running the kernel in a virtual platform built with the Fast
-	  Models product from ARM.
-
-config VMFS_DEV_BASE
-	hex "VMFS base address"
-	depends on VMFS_FS
-	default 0x8021010000
-
-config VMFS_IRQ
-	int "VMFS IRQ"
-	depends on VMFS_FS
-	default 311
+source "fs/vmfs/Kconfig"
 
 endmenu
